fixed changelog category tag vertical alignment issue

--- a/styles/main1.css
+++ b/styles/main1.css
@@ -444,7 +444,7 @@ main details {
   background-color: #e2f4ff;
   border-radius: 5px;
   line-height: 1.5rem;
-  padding: 0.7rem 0.7rem 0rem;
+  padding: 0.35rem 0.7rem 0.35rem;
   font-size: 0.8rem;
   margin-bottom: 1rem;
 }
